// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrentRefinements options.refinements can be used with a disjunctive facet 1`] = `
<div>
  <div
    class="root"
  >
    <ul
      class="list"
    >
      <li
        class="item"
      >
        <span
          class="label"
        >
          CustomDisjunctiveFacet
          :
        </span>
        <span
          class="category"
        >
          <span
            class="categoryLabel"
          >
            val1
          </span>
          <button
            class="delete"
          >
            ✕
          </button>
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`CurrentRefinements options.refinements can be used with a facet 1`] = `
<div>
  <div
    class="root"
  >
    <ul
      class="list"
    >
      <li
        class="item"
      >
        <span
          class="label"
        >
          CustomFacet
          :
        </span>
        <span
          class="category"
        >
          <span
            class="categoryLabel"
          >
            val1
          </span>
          <button
            class="delete"
          >
            ✕
          </button>
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`CurrentRefinements options.refinements can be used with a hierarchical facet 1`] = `
<div>
  <div
    class="root"
  >
    <ul
      class="list"
    >
      <li
        class="item"
      >
        <span
          class="label"
        >
          CustomHierarchicalFacet
          :
        </span>
        <span
          class="category"
        >
          <span
            class="categoryLabel"
          >
            val1
          </span>
          <button
            class="delete"
          >
            ✕
          </button>
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`CurrentRefinements options.refinements can be used with a query 1`] = `
<div>
  <div
    class="root"
  >
    <ul
      class="list"
    >
      <li
        class="item"
      >
        <span
          class="label"
        >
          Query
          :
        </span>
        <span
          class="category"
        >
          <span
            class="categoryLabel"
          >
            <q>
              search1
            </q>
          </span>
          <button
            class="delete"
          >
            ✕
          </button>
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`CurrentRefinements options.refinements can be used with a tag 1`] = `
<div>
  <div
    class="root"
  >
    <ul
      class="list"
    >
      <li
        class="item"
      >
        <span
          class="label"
        >
          _tags
          :
        </span>
        <span
          class="category"
        >
          <span
            class="categoryLabel"
          >
            tag1
          </span>
          <button
            class="delete"
          >
            ✕
          </button>
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`CurrentRefinements options.refinements can be used with an exclude 1`] = `
<div>
  <div
    class="root"
  >
    <ul
      class="list"
    >
      <li
        class="item"
      >
        <span
          class="label"
        >
          CustomExcludeFacet
          :
        </span>
        <span
          class="category"
        >
          <span
            class="categoryLabel"
          >
            val1
          </span>
          <button
            class="delete"
          >
            ✕
          </button>
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`CurrentRefinements options.refinements can be used with numeric filters 1`] = `
<div>
  <div
    class="root"
  >
    <ul
      class="list"
    >
      <li
        class="item"
      >
        <span
          class="label"
        >
          CustomNumericFilter
          :
        </span>
        <span
          class="category"
        >
          <span
            class="categoryLabel"
          >
            val1
          </span>
          <button
            class="delete"
          >
            ✕
          </button>
        </span>
      </li>
      <li
        class="item"
      >
        <span
          class="label"
        >
          CustomNumericFilter
          :
        </span>
        <span
          class="category"
        >
          <span
            class="categoryLabel"
          >
            val2
          </span>
          <button
            class="delete"
          >
            ✕
          </button>
        </span>
      </li>
      <li
        class="item"
      >
        <span
          class="label"
        >
          CustomNumericFilter
          :
        </span>
        <span
          class="category"
        >
          <span
            class="categoryLabel"
          >
            val3
          </span>
          <button
            class="delete"
          >
            ✕
          </button>
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`CurrentRefinements renders 1`] = `
<div>
  <div
    class="root"
  >
    <ul
      class="list"
    >
      <li
        class="item"
      >
        <span
          class="label"
        >
          Facet
          :
        </span>
        <span
          class="category"
        >
          <span
            class="categoryLabel"
          >
            facet-val1
          </span>
          <button
            class="delete"
          >
            ✕
          </button>
        </span>
        <span
          class="category"
        >
          <span
            class="categoryLabel"
          >
            facet-val2
          </span>
          <button
            class="delete"
          >
            ✕
          </button>
        </span>
      </li>
      <li
        class="item"
      >
        <span
          class="label"
        >
          FacetExclude
          :
        </span>
        <span
          class="category"
        >
          <span
            class="categoryLabel"
          >
            disjunctiveFacet-val1
          </span>
          <button
            class="delete"
          >
            ✕
          </button>
        </span>
      </li>
      <li
        class="item"
      >
        <span
          class="label"
        >
          Disjunctive
          :
        </span>
        <span
          class="category"
        >
          <span
            class="categoryLabel"
          >
            disjunctiveFacet-val1
          </span>
          <button
            class="delete"
          >
            ✕
          </button>
        </span>
      </li>
      <li
        class="item"
      >
        <span
          class="label"
        >
          Hierarchical
          :
        </span>
        <span
          class="category"
        >
          <span
            class="categoryLabel"
          >
            hierarchicalFacet-val1
          </span>
          <button
            class="delete"
          >
            ✕
          </button>
        </span>
      </li>
      <li
        class="item"
      >
        <span
          class="label"
        >
          Numeric
          :
        </span>
        <span
          class="category"
        >
          <span
            class="categoryLabel"
          >
            numericFacet-val1
          </span>
          <button
            class="delete"
          >
            ✕
          </button>
        </span>
      </li>
      <li
        class="item"
      >
        <span
          class="label"
        >
          Tag
          :
        </span>
        <span
          class="category"
        >
          <span
            class="categoryLabel"
          >
            tag1
          </span>
          <button
            class="delete"
          >
            ✕
          </button>
        </span>
      </li>
    </ul>
  </div>
</div>
`;
